last changes form the editor

--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -105,7 +105,7 @@
 \WSCpagesetup{Gutsche}
 
 % AUTHOR: Enter the title, all letters in upper case
-\title{Dark Matter And Super Symmetry: Exploring And Explaining The Universe With Simulations At The LHC}
+\title{DARK MATTER AND SUPER SYMMETRY: EXPLORING AND EXPLAINING THE UNIVERSE WITH SIMULATIONS AT THE LHC}
 
 % AUTHOR: Enter the authors of the article, see end of the example document for further examples
 \author{Oliver Gutsche\\ [12pt]
@@ -144,7 +144,7 @@ Today, the Standard Model is very successful in describing matter and their inte
 
 The Standard Model is based on Quantum Field Theory Caluclations~\shortcite{peskin1995introduction} to mathematically describe particles and their interactions. The rules of particle physics are governed by quantum mechanics~\shortcite{feynman1990q}. To deduce fundamental laws of how particles interact, experimental observables have to be translated to properties that the theory can calculate. The comparison of experiment and theory has to take into account the statistical nature of the predictions. Averaging over many measurements of the same type of interaction is necessary to make statistically significant statements. Simulation is needed in all steps of the scientific process to verify and enhance the Standard Model.
 
-\subsection{EVENT SIMULATION} 
+\subsection{Event Simulation} 
 \label{subsec:eventsimulation}
 
 The empirical calculation of a particle interaction is only possible in approximation and is called event simulation. The problem of describing mathematically a simple collision of two particles (initial state) producing a different set of two particles (final state) at the first and most basic order can be calculated simply by calculating the exchange of a force particle. First the interaction of the two incoming particles producing the force particle is calculated (first vertex), then the decay of the force particle into the outgoing set of two particles (second vertex) is calculated.
@@ -157,7 +157,7 @@ The second kind of higher order correction can only be approximated because of l
 
 A sufficiently large sample set of these simulated interactions allows to make statistically significant statements about the interaction of interest, including kinematic distributions of the final state, through averaging the results. Sufficiently large statistics means that the phase space of allowed configurations is sufficiently covered.
 
-\subsection{DETECTOR SIMULATION} 
+\subsection{Detector Simulation} 
 \label{subsec:detectorsimulation}
 
 To verify or even extend the theory, experiments and the comparison of experimental results with theoretical predictions are needed. The event simulation step described in Sec.~\ref{subsec:eventsimulation} is not directly comparable with measurements of an experimental setup, because only few elementary particles are stable and also detectable in their elementary form.
@@ -174,7 +174,7 @@ Detectors are made of matter and detect particles by measuring the interaction o
 
 The last part of the detector simulation step translates the energy depositions of the particles simulated by Geant into electrical signals of the used detectors and detector systems. After this step, a simulated interaction and an experimentally recorded interaction with a detector are equivalent.
 
-\subsection{RECONSTRUCTION}
+\subsection{Reconstruction}
 \label{subsec:reconstruction}
 
 The current understanding of nature in the form of the Standard Model is very advanced. New discoveries or improvements require higher and higher energies in the final state of the produced particle interaction. This requires that particle accelerators are becoming more advanced but also more difficult and costly to build and operate. To maximize the variety of investigations of the produced collisions, a complete capture of the final state of the collisions is required. Sophisticated detector systems that hermetically surround the collision regions are built. Different detector techniques are used to measure different aspects of the final states of the collisions. Charged particle tracks are measured with tracking detectors closest to the interaction region. Particle tracks give momentum and direction of charged particles, if the tracking detectors are situated in a magnetic field. Calorimeters are arranged outside the tracking detectors to measure the energy of particles. Muons are very minimally interacting with material. Special muon detectors outside the calorimeters are built to detect the muons. Fig.~\ref{fig:cmscross} shows the transversal cross section of the CMS detector described in Sec.~\ref{sec:lhc} and how different particles are reconstructed using different detector components.
@@ -248,12 +248,12 @@ Producing all the required simulated events is a massive undertaking for the CMS
    \centering
    \includegraphics[width=0.65\textwidth]{grid}
    \includegraphics[width=0.3\textwidth]{grid2}
-   \caption{(left) Map of CMS GRID sites (right) CMS GRID infrastructure
+   \caption{(left) Map of CMS GRID sites (right) CMS GRID infrastructure.
    \label{fig:grid}}
 }
 \end{figure}
 
-\section{The FUTURE: HIGH-LUMINOSITY LHC}
+\section{THE FUTURE: HIGH-LUMINOSITY LHC}
 \label{sec:hl-lhc}
 
 The LHC is currently in its 2nd running period. Simulations of impact of the radiation background produced by operating the machine and comparisons to actual degradation of detectors and equipment show that by 2023 many components will reach their end-of-life. Combined with the plan to increase the instantaneous luminosity for the running period 2026-2037 (see Fig.~\ref{fig:hllhc}), a measure of how well the beams are focussed and precisely brought to collision, the LHC and the experiments started upgrade programs for the High-Luminosity LHC (HL-LHC). The higher instantaneous luminosity will allow to increase the physics reach significantly, but also will increase the number of parasitic collisions (PileUp) significantly as well, which increased the demands on the detector systems to realize the increased physics potential. 
@@ -262,14 +262,14 @@ The LHC is currently in its 2nd running period. Simulations of impact of the rad
 {
    \centering
    \includegraphics[width=0.70\textwidth]{hllhc}
-   \caption{LHC plan for integrated and instantaneous luminosity over time, covering LHC runs 1-3 and High-Luminosity LHC (HL-LHC.)
+   \caption{LHC plan for integrated and instantaneous luminosity over time, covering LHC runs 1-3 and High-Luminosity LHC (HL-LHC.).
    \label{fig:hllhc}}
 }
 \end{figure}
 
 This results in a large optimization problem, where improvements to the detector systems impact the physics results and the optimization of the physics results require corresponding detector performance. Simulations play a crucial role to optimize detector and physics performance under HL-LHC running conditions. 
 
-\section{Summary}
+\section{SUMMARY}
 \label{sec:summary}
 
 Simulations play a crucial role in particle physics. They incorporate the theoretical predictions of the Standard Model and also new theories not yet proven, as well as using Monte Carlo techniques to simulate effects that are not empirically understood. Simulated events are indispensable for the recording of events in developing and optimizing the trigger, in extracting physics results and potential discoveries, and to plan and optimize updates. All these simulations require a lot of computing resources and will be crucial for the future success of the LHC and HL-LHC to enable a successful physics harvest.
