added Fermilab preprint number comment

--- a/wsc16paper.tex
+++ b/wsc16paper.tex
@@ -292,3 +292,4 @@ I would like to thank my colleagues of the CMS collaboration to have built, main
 
 \end{document}
 
+% Fermilab preprint number: FERMILAB-CONF-16-265-CD
